<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    tools:context=".DeployService">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="2"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:text="@string/mac" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/mac"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/background"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:hint="@string/scanning" />

                <ImageView
                    android:id="@+id/scanning"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@drawable/imageview_shap"
                    />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"

            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left|center_vertical"
                android:text="@string/ip"
                android:paddingLeft="10dp"
                android:textSize="16sp" />

            <com.advantech.edgexdeploy.IPEditText
                android:id="@+id/ipedit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:paddingLeft="5dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:background="@drawable/background" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"

            android:layout_weight="3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left|center_vertical"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:text="@string/port"/>
            <EditText
                android:id="@+id/port"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:inputType="numberDecimal"
                android:background="@drawable/background">
            </EditText>

        </LinearLayout>

<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"

        android:layout_weight="3"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left|center_vertical"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:text="@string/privatevalue"/>
        <EditText
            android:id="@+id/key"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:hint="@string/key"
            android:background="@drawable/background">
        </EditText>

    </LinearLayout>

    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_weight="3">
        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/button_shap"
            android:textColor="@color/white"
            android:text="@string/send"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/macaddr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="20dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/macaddr" />
            <TextView
                android:id="@+id/status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:text="@string/status"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:text="@string/result"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp">
            </ListView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>