<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" >
		<TextView
            android:id="@+id/aboutmsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/aboutmsg"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/aboutmsg"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:textSize="16sp" />
		<TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/appVersion"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textSize="25sp" />
        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_above="@id/appName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"/>
          <!--  android:src="@drawable/icon" -->
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" >

        <TextView
            android:id="@+id/copyRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/website"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/copy_right"
            android:textSize="14sp"
            android:singleLine="true" />
        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/website"
            android:textSize="14sp"
            android:singleLine="true" />

    </RelativeLayout>

</LinearLayout>